Fix expanding/collapsing of sidebar

--- a/budgext-angular/src/app/core/layout/sidebar/sidebar.component.scss
+++ b/budgext-angular/src/app/core/layout/sidebar/sidebar.component.scss
@@ -1,7 +1,3 @@
-.sidenav {
-  width: 250px;
-}
-
 .toggle {
   width: 100%;
   display: flex;
