--- a/budgext-angular/src/app/core/layout/user-layout/user-layout.component.scss
+++ b/budgext-angular/src/app/core/layout/user-layout/user-layout.component.scss
@@ -3,14 +3,17 @@ header {
   width: 100%;
 }
 
-mat-sidenav-content {
-  background-color: white;
-  padding: 16px;
-}
-
-// TODO Remove ??
 .content-container {
   min-height: calc(100vh - 64px); /* Full height minus header height */
   box-sizing: border-box;
+  background-color: white;
   padding: 25px;
+}
+
+.expanded {
+  width: 250px;
+}
+
+.collapsed {
+  width: 60px;
 }
